fix: Overflow issues when a lot of game objects

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,8 @@ html, body, canvas {
   transform: translateX(100%); /* Fully offscreen */
   transition: transform 0.3s ease;
   z-index: 1000;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .sidebar.open {
